--- a/styles.css
+++ b/styles.css
@@ -359,6 +359,28 @@ textarea {
   padding: 0.2em 0;
 }
 
+:root {
+  font-size: 10px;
+}
+
+@media (max-width: 1700px) {
+  :root {
+    font-size: 8px;
+  }
+}
+
+@media (max-width: 1300px) {
+  :root {
+    font-size: 6px;
+  }
+}
+
+@media (max-width: 960px) {
+  :root {
+    font-size: 4px;
+  }
+}
+
 body {
   font-family: 'Montserrat', sans-serif;
 }
@@ -375,13 +397,47 @@ body .eagle h1, body .eagle h2 {
 
 body .eagle h2 {
   font-family: 'Kaushan Script', cursive;
-  font-size: 72px;
-  margin: 160px 0 60px;
+  font-size: 7.2rem;
+  margin: 12rem 0 6rem;
 }
 
 body .eagle h1 {
-  font-size: 150px;
+  font-size: 15rem;
   font-weight: bold;
+}
+
+body .eagle hr {
+  width: 3%;
+  height: .3rem;
+  margin-top: 7rem;
+  background-color: white;
+  border: none;
+}
+
+body .eagle .button {
+  width: 8%;
+  margin: 5rem auto 0;
+  border: .3rem solid white;
+  text-align: center;
+  padding: 1.2rem 2.8rem;
+}
+
+body .eagle .button p {
+  color: white;
+  font-weight: bold;
+  font-size: 1.4rem;
+}
+
+@media (max-width: 1700px) {
+  body .eagle .button {
+    margin: 15rem auto 0;
+  }
+}
+
+@media (max-width: 1300px) {
+  body .eagle .button {
+    margin: 20rem auto 0;
+  }
 }
 
 .nav-bar {
@@ -392,64 +448,458 @@ body .eagle h1 {
 
 .nav-bar div:first-child {
   display: inline-block;
-  width: 40%;
+  width: 15%;
 }
 
 .nav-bar div:first-child h3 {
   color: white;
-  margin-top: 30px;
-  margin-left: 100px;
-  font-size: 30px;
+  margin-top: 5rem;
+  margin-left: 10rem;
+  font-size: 3rem;
   font-weight: bold;
 }
 
 .nav-bar div:last-child {
   display: inline-block;
-  width: 60%;
+  width: 85%;
+  margin-top: 5rem;
 }
 
 .nav-bar div:last-child h4 {
   display: inline;
   color: white;
-  font-size: 14px;
+  font-size: 1.4rem;
   float: right;
-  margin-right: 60px;
+  margin-right: 6rem;
 }
 
 .nav-bar div:last-child img {
   float: right;
-  margin-right: 60px;
+  margin-right: 6rem;
+}
+
+.bottom-nav {
+  width: 80%;
+  margin: 0 auto;
+  font-size: 0;
+  margin-top: 7rem;
+}
+
+@media (max-width: 1700px) {
+  .bottom-nav {
+    margin-top: 15rem;
+  }
+}
+
+@media (max-width: 1300px) {
+  .bottom-nav :root {
+    font-size: 6px;
+  }
+}
+
+.bottom-nav div {
+  display: inline-block;
+  width: 22.5%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-top: .3rem solid #f7eac5;
+  padding-top: 25px;
+  margin: 0 1.25%;
+  text-align: left;
+}
+
+.bottom-nav div h4 {
+  display: inline;
+  font-size: 2.4rem;
+  font-weight: bold;
+  color: white;
+  margin-right: .7rem;
+}
+
+.bottom-nav div p {
+  display: inline;
+  font-size: 1.4rem;
+  color: white;
 }
 
 .about-us {
-  height: 750px;
   text-align: center;
+  margin-bottom: 6rem;
 }
 
 .about-us h4 {
   font-family: 'Kaushan Script', cursive;
-  font-size: 24px;
-  margin: 90px 0 20px;
+  font-size: 2.4rem;
+  margin: 9rem 0 2rem;
 }
 
 .about-us h3 {
-  font-size: 30px;
+  font-size: 3rem;
   font-weight: bold;
-  margin-bottom: 40px;
+  margin-bottom: 4rem;
 }
 
 .about-us hr {
   width: 3%;
-  height: 3px;
+  height: .3rem;
   background-color: #f38181;
   border: none;
 }
 
 .about-us p {
   font-family: 'Roboto', sans-serif;
-  font-size: 14px;
+  font-size: 1.4rem;
   color: #999999;
-  padding: 50px 20% 0;
-  line-height: 15px;
+  padding: 5rem 20% 0;
+  line-height: 1.5rem;
+}
+
+.about-us div {
+  width: 80%;
+  margin: 9rem auto 0;
+  font-size: 0;
+}
+
+.about-us div img:not(:nth-child(2)) {
+  vertical-align: top;
+  display: inline-block;
+  width: 32%;
+}
+
+.about-us div img:nth-child(2) {
+  vertical-align: top;
+  display: inline-block;
+  width: 32%;
+  margin: 0 2%;
+}
+
+.numbers {
+  max-height: 25rem;
+  background-color: #95e1d3;
+}
+
+.numbers div {
+  width: 80%;
+  height: 100%;
+  margin: 0 auto;
+  font-size: 0;
+}
+
+.numbers div div {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  width: 20%;
+  padding: 3% 0;
+  text-align: center;
+}
+
+.numbers div div h2 {
+  font-size: 7.2rem;
+  font-weight: bold;
+  color: white;
+}
+
+.numbers div div p {
+  margin-top: 2.7rem;
+  font-size: 1.4rem;
+  font-weight: 100;
+  color: white;
+}
+
+.numbers div div:not(:first-child) {
+  border-left: .1rem solid #b5eae0;
+}
+
+.about-us.second {
+  height: 20rem;
+}
+
+.services {
+  width: 80%;
+  height: 40rem;
+  margin: 0 auto;
+}
+
+.services div {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  width: 33%;
+  text-align: left;
+  padding: 4rem 0;
+}
+
+.services div img {
+  vertical-align: top;
+  display: inline-block;
+  padding-right: 3rem;
+}
+
+.services div div {
+  vertical-align: top;
+  width: 70%;
+  padding: 0;
+}
+
+.services div div h6 {
+  font-size: 1.4rem;
+  margin-bottom: 2rem;
+}
+
+.services div div p {
+  font-family: 'Roboto', sans-serif;
+  font-size: 1.4rem;
+  color: #b3b3b3;
+  line-height: 2rem;
+}
+
+.services hr {
+  background-color: #e5e5e5;
+  height: .1rem;
+  border: none;
+}
+
+.about-us.third {
+  height: 20rem;
+  padding-top: 2rem;
+}
+
+.design {
+  background-image: url("./pictures/mountain-background.jpg");
+  height: 90rem;
+  position: relative;
+}
+
+.design img:nth-child(2) {
+  position: absolute;
+  bottom: 0;
+  left: 35%;
+  height: auto;
+}
+
+@media (max-width: 1600px) {
+  .design img:nth-child(2) {
+    width: 25%;
+    height: auto;
+  }
+}
+
+.design img:nth-child(3) {
+  position: absolute;
+  bottom: 0;
+  left: 55%;
+  bottom: -7%;
+}
+
+.about-us.fourth {
+  height: 30rem;
+}
+
+.service {
+  width: 80%;
+  margin: 0 auto;
+  font-size: 0;
+  height: 60rem;
+}
+
+.service > img {
+  width: 50%;
+  vertical-align: top;
+}
+
+.service > div {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding-left: 2rem;
+  width: 50%;
+  vertical-align: top;
+}
+
+.service > div > div {
+  border: 1px solid #e5e5e5;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 2rem;
+}
+
+.service > div > div p {
+  margin-left: 1.5rem;
+  font-size: 1.4rem;
+  display: inline;
+}
+
+.service > div > div img:last-child {
+  float: right;
+  margin-top: .5rem;
+}
+
+.service > div .text {
+  height: 24rem;
+  overflow: auto;
+  scrollbar-color: red;
+  padding: 2rem;
+  scrollbar-width: 10rem;
+}
+
+.service > div .text p {
+  font-family: 'Roboto', sans-serif;
+  font-size: 1.4rem;
+  color: #999999;
+  font-style: italic;
+  line-height: 2rem;
+  letter-spacing: .1rem;
+}
+
+.service > div .text::-webkit-scrollbar {
+  width: 10px;
+}
+
+.service > div .text::-webkit-scrollbar-track {
+  background: #f5f5f5;
+  border-radius: 1rem;
+}
+
+.service > div .text::-webkit-scrollbar-thumb {
+  background: #95e1d3;
+  border-radius: 1rem;
+}
+
+.service > div .text::-webkit-scrollbar-thumb:hover {
+  background: #9ef5e5;
+}
+
+.service > div > div:not(:first-child) {
+  margin-bottom: 2rem;
+}
+
+.review {
+  height: 35rem;
+  background-color: #f8f8f8;
+}
+
+.review > div {
+  width: 80%;
+  margin: 0 auto;
+  padding-top: 10rem;
+}
+
+.review > div img {
+  vertical-align: middle;
+  float: left;
+}
+
+.review > div > img:nth-child(2) {
+  margin-left: 10rem;
+}
+
+.review > div > img:last-child {
+  float: right;
+}
+
+.review > div > div {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 0 20rem;
+  width: 80%;
+}
+
+.review > div > div hr {
+  display: inline-block;
+  width: 10%;
+  height: .3rem;
+  background-color: #f38181;
+  border: none;
+}
+
+.review > div > div h6 {
+  display: inline;
+  font-family: 'Kaushan Script', cursive;
+  font-size: 2.4rem;
+  margin-left: 2rem;
+}
+
+.review > div > div p {
+  font-family: 'Roboto', sans-serif;
+  font-size: 2.4rem;
+  color: #b1b1b1;
+  margin-bottom: 3rem;
+}
+
+.names {
+  width: 80%;
+  margin: 0 auto 10rem;
+  font-size: 0;
+}
+
+.names > div {
+  display: inline-block;
+  width: 33.33%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  text-align: center;
+}
+
+.names > div h6 {
+  font-size: 1.4rem;
+  font-weight: bold;
+  margin-bottom: .5rem;
+}
+
+.names > div p {
+  font-family: 'Roboto', sans-serif;
+  font-size: 1.4rem;
+  font-style: italic;
+  color: #aaaaaa;
+}
+
+.logo {
+  background-color: #f8f8f8;
+  text-align: center;
+  height: 25rem;
+}
+
+.logo img {
+  padding-top: 5rem;
+}
+
+.gallery {
+  font-size: 0;
+  position: relative;
+  margin-bottom: 10rem;
+}
+
+.gallery img {
+  position: absolute;
+}
+
+.gallery > img:nth-child(2) {
+  right: 96rem;
+}
+
+.gallery > img:nth-child(3) {
+  right: 48rem;
+}
+
+.gallery > img:nth-child(4) {
+  right: 0;
+}
+
+.gallery > img:nth-child(5) {
+  top: 39rem;
+}
+
+.gallery > img:nth-child(6) {
+  top: 39rem;
+  left: 48rem;
+  z-index: -1;
+}
+
+.gallery > img:nth-child(7) {
+  top: 39rem;
+  right: 0rem;
 }
 /*# sourceMappingURL=styles.css.map */
